[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Collision&Health/Collision&Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Hexagon.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hexagon3:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1, 1.9 ),
"transitions": PoolRealArray( 2.37841, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.690805, 0.690805 ), Vector2( 0.5, 0.5 ), Vector2( 0.690805, 0.690805 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hexagon2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 2.21914, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.520697, 0.520697 ), Vector2( 0.25, 0.25 ), Vector2( 0.520697, 0.520697 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 1 )
max_speed = 420
acceleration = 2460
deceleration = 4476
turning_speed = 12400
dash_speed = 2140
dash_time = 0.02

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24, -24, 0, -32, 24, -24, 32, 0, 24, 24, 0, 32, -24, 24, -32, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="DashReload" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="InvinciblilityTime" type="Timer" parent="."]
wait_time = 0.24
one_shot = true

[node name="DashTime" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="Collision&Health" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Node2D" parent="."]

[node name="Hexagon" parent="Sprite" instance=ExtResource( 3 )]
color = Color( 0.709804, 0.0941176, 0.0941176, 1 )

[node name="Hexagon3" parent="Sprite" instance=ExtResource( 3 )]
scale = Vector2( 0.589201, 0.589201 )
color = Color( 0.843137, 0.486275, 0.0980392, 1 )

[node name="Hexagon2" parent="Sprite" instance=ExtResource( 3 )]
scale = Vector2( 0.37655, 0.37655 )
color = Color( 0.984314, 0.67451, 0.133333, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="DashReload" to="." method="_on_DashReload_timeout"]
[connection signal="timeout" from="InvinciblilityTime" to="." method="_on_InvinciblilityTime_timeout"]
[connection signal="timeout" from="DashTime" to="." method="_on_DashTime_timeout"]
